@@ -80,25 +80,22 @@ final class PlatformDependent0 {
             direct = ByteBuffer.allocateDirect(1);
 
             // attempt to access field Unsafe#theUnsafe
-            final Object maybeUnsafe = AccessController.doPrivileged(new PrivilegedAction<Object>() {
-                @Override
-                public Object run() {
-                    try {
-                        final Field unsafeField = Unsafe.class.getDeclaredField("theUnsafe");
-                        // We always want to try using Unsafe as the access still works on java9 as well and
-                        // we need it for out native-transports and many optimizations.
-                        Throwable cause = ReflectionUtil.trySetAccessible(unsafeField, false);
-                        if (cause != null) {
-                            return cause;
-                        }
-                        // the unsafe instance
-                        return unsafeField.get(null);
-                    } catch (NoSuchFieldException | SecurityException
-                            | IllegalAccessException | NoClassDefFoundError e) {
-                        return e;
-                    } // Also catch NoClassDefFoundError in case someone uses for example OSGI and it made
-                    // Unsafe unloadable.
-                }
+            final Object maybeUnsafe = AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+                try {
+                    final Field unsafeField = Unsafe.class.getDeclaredField("theUnsafe");
+                    // We always want to try using Unsafe as the access still works on java9 as well and
+                    // we need it for out native-transports and many optimizations.
+                    Throwable cause = ReflectionUtil.trySetAccessible(unsafeField, false);
+                    if (cause != null) {
+                        return cause;
+                    }
+                    // the unsafe instance
+                    return unsafeField.get(null);
+                } catch (NoSuchFieldException | SecurityException
+                        | IllegalAccessException | NoClassDefFoundError e) {
+                    return e;
+                } // Also catch NoClassDefFoundError in case someone uses for example OSGI and it made
+                // Unsafe unloadable.
             });
 
             // the conditional check here can not be replaced with checking that maybeUnsafe
@@ -119,16 +116,13 @@ final class PlatformDependent0 {
             // http://www.mail-archive.com/jdk6-dev@openjdk.java.net/msg00698.html
             if (unsafe != null) {
                 final Unsafe finalUnsafe = unsafe;
-                final Object maybeException = AccessController.doPrivileged(new PrivilegedAction<Object>() {
-                    @Override
-                    public Object run() {
-                        try {
-                            finalUnsafe.getClass().getDeclaredMethod(
-                                    "copyMemory", Object.class, long.class, Object.class, long.class, long.class);
-                            return null;
-                        } catch (NoSuchMethodException | SecurityException e) {
-                            return e;
-                        }
+                final Object maybeException = AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+                    try {
+                        finalUnsafe.getClass().getDeclaredMethod(
+                                "copyMemory", Object.class, long.class, Object.class, long.class, long.class);
+                        return null;
+                    } catch (NoSuchMethodException | SecurityException e) {
+                        return e;
                     }
                 });
 
@@ -146,24 +140,21 @@ final class PlatformDependent0 {
                 final Unsafe finalUnsafe = unsafe;
 
                 // attempt to access field Buffer#address
-                final Object maybeAddressField = AccessController.doPrivileged(new PrivilegedAction<Object>() {
-                    @Override
-                    public Object run() {
-                        try {
-                            final Field field = Buffer.class.getDeclaredField("address");
-                            // Use Unsafe to read value of the address field. This way it will not fail on JDK9+ which
-                            // will forbid changing the access level via reflection.
-                            final long offset = finalUnsafe.objectFieldOffset(field);
-                            final long address = finalUnsafe.getLong(direct, offset);
+                final Object maybeAddressField = AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+                    try {
+                        final Field field = Buffer.class.getDeclaredField("address");
+                        // Use Unsafe to read value of the address field. This way it will not fail on JDK9+ which
+                        // will forbid changing the access level via reflection.
+                        final long offset = finalUnsafe.objectFieldOffset(field);
+                        final long address = finalUnsafe.getLong(direct, offset);
 
-                            // if direct really is a direct buffer, address will be non-zero
-                            if (address == 0) {
-                                return null;
-                            }
-                            return field;
-                        } catch (NoSuchFieldException | SecurityException e) {
-                            return e;
+                        // if direct really is a direct buffer, address will be non-zero
+                        if (address == 0) {
+                            return null;
                         }
+                        return field;
+                    } catch (NoSuchFieldException | SecurityException e) {
+                        return e;
                     }
                 });
 
@@ -205,20 +196,17 @@ final class PlatformDependent0 {
             long address = -1;
             try {
                 final Object maybeDirectBufferConstructor =
-                        AccessController.doPrivileged(new PrivilegedAction<Object>() {
-                            @Override
-                            public Object run() {
-                                try {
-                                    final Constructor<?> constructor =
-                                            direct.getClass().getDeclaredConstructor(long.class, int.class);
-                                    Throwable cause = ReflectionUtil.trySetAccessible(constructor, true);
-                                    if (cause != null) {
-                                        return cause;
-                                    }
-                                    return constructor;
-                                } catch (NoSuchMethodException | SecurityException e) {
-                                    return e;
+                        AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+                            try {
+                                final Constructor<?> constructor =
+                                        direct.getClass().getDeclaredConstructor(long.class, int.class);
+                                Throwable cause = ReflectionUtil.trySetAccessible(constructor, true);
+                                if (cause != null) {
+                                    return cause;
                                 }
+                                return constructor;
+                            } catch (NoSuchMethodException | SecurityException e) {
+                                return e;
                             }
                         });
 
@@ -299,33 +287,27 @@ final class PlatformDependent0 {
             UNALIGNED = unaligned;
 
             if (javaVersion() >= 9) {
-                Object maybeException = AccessController.doPrivileged(new PrivilegedAction<Object>() {
-                    @Override
-                    public Object run() {
-                        try {
-                            // Java9 has jdk.internal.misc.Unsafe and not all methods are propagated to
-                            // sun.misc.Unsafe
-                            Class<?> internalUnsafeClass = getClassLoader(PlatformDependent0.class)
-                                    .loadClass("jdk.internal.misc.Unsafe");
-                            Method method = internalUnsafeClass.getDeclaredMethod("getUnsafe");
-                            return method.invoke(null);
-                        } catch (Throwable e) {
-                            return e;
-                        }
+                Object maybeException = AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+                    try {
+                        // Java9 has jdk.internal.misc.Unsafe and not all methods are propagated to
+                        // sun.misc.Unsafe
+                        Class<?> internalUnsafeClass = getClassLoader(PlatformDependent0.class)
+                                .loadClass("jdk.internal.misc.Unsafe");
+                        Method method = internalUnsafeClass.getDeclaredMethod("getUnsafe");
+                        return method.invoke(null);
+                    } catch (Throwable e) {
+                        return e;
                     }
                 });
                 if (!(maybeException instanceof Throwable)) {
                     internalUnsafe = maybeException;
                     final Object finalInternalUnsafe = internalUnsafe;
-                    maybeException = AccessController.doPrivileged(new PrivilegedAction<Object>() {
-                        @Override
-                        public Object run() {
-                            try {
-                                return finalInternalUnsafe.getClass().getDeclaredMethod(
-                                        "allocateUninitializedArray", Class.class, int.class);
-                            } catch (NoSuchMethodException | SecurityException e) {
-                                return e;
-                            }
+                    maybeException = AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+                        try {
+                            return finalInternalUnsafe.getClass().getDeclaredMethod(
+                                    "allocateUninitializedArray", Class.class, int.class);
+                        } catch (NoSuchMethodException | SecurityException e) {
+                            return e;
                         }
                     });
 
@@ -746,12 +728,7 @@ final class PlatformDependent0 {
         if (System.getSecurityManager() == null) {
             return clazz.getClassLoader();
         } else {
-            return AccessController.doPrivileged(new PrivilegedAction<ClassLoader>() {
-                @Override
-                public ClassLoader run() {
-                    return clazz.getClassLoader();
-                }
-            });
+            return AccessController.doPrivileged((PrivilegedAction<ClassLoader>) clazz::getClassLoader);
         }
     }
 
@@ -759,12 +736,8 @@ final class PlatformDependent0 {
         if (System.getSecurityManager() == null) {
             return Thread.currentThread().getContextClassLoader();
         } else {
-            return AccessController.doPrivileged(new PrivilegedAction<ClassLoader>() {
-                @Override
-                public ClassLoader run() {
-                    return Thread.currentThread().getContextClassLoader();
-                }
-            });
+            return AccessController.doPrivileged((PrivilegedAction<ClassLoader>) () ->
+                    Thread.currentThread().getContextClassLoader());
         }
     }
 
@@ -772,12 +745,7 @@ final class PlatformDependent0 {
         if (System.getSecurityManager() == null) {
             return ClassLoader.getSystemClassLoader();
         } else {
-            return AccessController.doPrivileged(new PrivilegedAction<ClassLoader>() {
-                @Override
-                public ClassLoader run() {
-                    return ClassLoader.getSystemClassLoader();
-                }
-            });
+            return AccessController.doPrivileged((PrivilegedAction<ClassLoader>) ClassLoader::getSystemClassLoader);
         }
     }
 
